# llm-schema-matching-m2m

./: .env.example  .gitignore  README.md  config.py  evaluation.py  ground_truth.py  llm_provider.py  logging_config.py  models.py  pipeline.py  prompt_building.py  prompt_postprocessing.py  prompt_sending.py  pyproject.toml  storage_json.py
notebooks/: analyze_m2m_quality.ipynb  generate_claude_baseline.ipynb  generate_m2m_results.ipynb  generate_relatedness_results.ipynb  utils.py
templates/: manyToMany.json  relationRelatedness.json
tests/: conftest.py  test_evaluation.py  test_ground_truth.py  test_llm_provider.py  test_models.py  test_pipeline.py  test_postprocessing.py
