[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "thesis-extension"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.7.2",
    "anthropic",
    "jinja2>=3.1.3",
    "tenacity",
    "pandas",
    "scikit-learn",
    "plotly",
    "python-dotenv",
    "pytest",
]

[tool.setuptools]
py-modules = [
    "config",
    "ground_truth",
    "logging_config",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
